# opencv_svm_testing

./: .gitignore  CMakeLists.txt  fhog_load_python_svm_model.cpp  fhog_object_detector_ex.cpp  ocv_svm_hog_detector.cpp  ocv_svm_hog_train.cpp  train_HOG.cpp
src/: Hand_Detector_v9_c10_t4.svm  my_detector_2.xml  my_detector_3.xml  my_detector_4.xml  my_first_detector.xml
